feat: to have statistics about DLE usage and trends (#299) * collect aggregated engine data * store data on the Platform side * make it optional: add a configuration flag to disable telemetry * add an endpoint providing configuration flags to be aware of the current telemetry mode * allow an empty verification token
